<resources>
    <string name="app_name">Task1</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="employee_list">Список Сотрудников</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="create_employee">Создать Сотрудника</string>
    <string name="edit_employee">Редактировать Сотрудника</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отменить</string>
    <string name="gender">Пол</string>
    <string name="male_gender">Мужской</string>
    <string name="female_gender">Женский</string>
    <string name="birthdate">Дата Рождения</string>
    <string name="error_saving">Ошибка сохраниния данных</string>
    <string name="select_element">Выберите элемент</string>
</resources>